# derivatives-modeling-power-derivatives

./: README.md  config  main.py  pyproject.toml
# src/electricity_models/: io.py
notebooks/: 01_explore_spot.ipynb  02_calibration.ipynb
src/electricity_models/: calibration.py  cleaning.py  diagnostics.py  features.py  io.py  models_one_factor.py  models_two_factor.py  pipeline.py  pricing.py  risk_premia.py  viz.py
