[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "electricity-models"
version = "0.1.0"
description = "OU-based electricity pricing models with Polars, modular calibration, and forward validation."
authors = [{ name = "Manuel Musngi", email = "manuel@example.com" }]
license = "MIT"
readme = "README.md"
packages = [{ include = "src/electricity_models" }]

[tool.poetry.dependencies]
python = "^3.11"

# Core numerical + data stack
polars = "^0.20.0"
numpy = "^1.26.0"
scipy = "^1.12.0"
pandas = "^2.2.0"         # optional, if you want to interop with Polars
matplotlib = "^3.8.0"

# Config + YAML
pyyaml = "^6.0.0"

# Development utilities
jupyter = "^1.0.0"        # optional, if you want notebooks
ipykernel = "^6.29.0"     # optional, for Jupyter kernels

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.0.0"
ruff = "^0.3.0"
mypy = "^1.8.0"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true

